[gd_scene load_steps=2 format=2]

[ext_resource path="res://City/Guild.gd" type="Script" id=2]

[node name="Guild" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopSpacer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="Unitspace" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 1920.0
margin_bottom = 876.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Unitspace"]
margin_right = 1920.0
margin_bottom = 672.0

[node name="LeftSpacer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer"]
margin_right = 150.0
margin_bottom = 672.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer"]
margin_left = 154.0
margin_right = 1766.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Unitcontainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/MarginContainer2"]
margin_right = 1612.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Unit1_Btn" type="Button" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/MarginContainer2/Unitcontainer"]
margin_right = 319.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Unit2_Btn" type="Button" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/MarginContainer2/Unitcontainer"]
margin_left = 323.0
margin_right = 642.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Unit3_Btn" type="Button" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/MarginContainer2/Unitcontainer"]
margin_left = 646.0
margin_right = 965.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Unit4_Btn" type="Button" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/MarginContainer2/Unitcontainer"]
margin_left = 969.0
margin_right = 1288.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Unit5_Btn" type="Button" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/MarginContainer2/Unitcontainer"]
margin_left = 1292.0
margin_right = 1612.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightSpacer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer"]
margin_left = 1770.0
margin_right = 1920.0
margin_bottom = 672.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3

[node name="BottomSpacer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 880.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="."]
margin_right = 128.0
margin_bottom = 86.0
text = "Back To City"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/MarginContainer2/Unitcontainer/Unit1_Btn" to="." method="_on_Unit1_Btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/MarginContainer2/Unitcontainer/Unit2_Btn" to="." method="_on_Unit2_Btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/MarginContainer2/Unitcontainer/Unit3_Btn" to="." method="_on_Unit3_Btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/MarginContainer2/Unitcontainer/Unit4_Btn" to="." method="_on_Unit4_Btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/MarginContainer2/Unitcontainer/Unit5_Btn" to="." method="_on_Unit5_Btn_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
